force-app/main/default/objects/Partner_Order__c/Partner_Order__c.object-meta.xml
<CustomObject>
    <label>Partner Order</label>
    <nameField>
        <displayFormat>PO-{000000000}</displayFormat>
        <label>Order ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Partner Orders</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>