force-app/main/default/objects/Partner_Order__c/fields/ASIN__c.field-meta.xml
<CustomField>
    <fullName>ASIN__c</fullName>
    <label>ASIN</label>
    <length>255</length>
    <type>Text</type>
</CustomField>