force-app/main/default/objects/Partner_Order__c/fields/Country__c.field-meta.xml
<CustomField>
    <fullName>Country__c</fullName>
    <defaultValue>&quot;US&quot;</defaultValue>
    <label>Country</label>
    <length>5</length>
    <type>Text</type>
</CustomField>