force-app/main/default/objects/Partner_Order__c/fields/Final_Shipment_Received__c.field-meta.xml
<CustomField>
    <fullName>Final_Shipment_Received__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Final Shipment Received</label>
    <type>Checkbox</type>
</CustomField>