force-app/main/default/objects/Partner_Order__c/fields/Fulfilled_Location__c.field-meta.xml
<CustomField>
    <fullName>Fulfilled_Location__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Fulfilled Location</label>
    <referenceTo>Location</referenceTo>
    <relationshipLabel>Partner Orders</relationshipLabel>
    <relationshipName>Partner_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>