force-app/main/default/objects/Partner_Order__c/fields/Is_Complete__c.field-meta.xml
<CustomField>
    <fullName>Is_Complete__c</fullName>
    <formula>IF( Total_Ordered_Quantity__c ==  Total_Shipped_Quantity__c , true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Complete</label>
    <type>Checkbox</type>
</CustomField>