force-app/main/default/objects/Partner_Order__c/fields/Order_Number__c.field-meta.xml
<CustomField>
    <fullName>Order_Number__c</fullName>
    <displayFormat>{0000000000}</displayFormat>
    <externalId>true</externalId>
    <label>Order Number</label>
    <type>AutoNumber</type>
</CustomField>