force-app/main/default/objects/Partner_Order__c/fields/Partner_Order_Number__c.field-meta.xml
<CustomField>
    <fullName>Partner_Order_Number__c</fullName>
    <formula>Retail_Partner__r.Short_Code__c +  Order_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Partner Order Number</label>
    <type>Text</type>
</CustomField>