force-app/main/default/objects/Partner_Order__c/fields/Partner_Order_Status__c.field-meta.xml
<CustomField>
    <fullName>Partner_Order_Status__c</fullName>
    <label>Partner Order Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>