force-app/main/default/objects/Partner_Order__c/fields/Retail_Partner__c.field-meta.xml
<CustomField>
    <fullName>Retail_Partner__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Retail Partner</label>
    <referenceTo>PartnerClientMap__c</referenceTo>
    <relationshipLabel>Partner Orders</relationshipLabel>
    <relationshipName>Partner_Orders</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>