force-app/main/default/objects/Partner_Order__c/fields/Shipping_Method__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Method__c</fullName>
    <label>Shipping Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>FedEx Ground</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>