force-app/main/default/objects/Partner_Order__c/fields/Total_Defective_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Total_Defective_Quantity__c</fullName>
    <label>Total Defective Quantity</label>
    <summarizedField>Partner_Order_Line_Item__c.Total_Defective_Quantity__c</summarizedField>
    <summaryForeignKey>Partner_Order_Line_Item__c.Partner_Order__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>