force-app/main/default/objects/Partner_Order__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Retail_Partner__c</columns>
    <columns>NAME</columns>
    <columns>Partner_Order_Number__c</columns>
    <columns>Confirmed__c</columns>
    <columns>Fulfilled_Location__c</columns>
    <columns>Partner_Order_Status__c</columns>
    <columns>Status__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Total_Ordered_Quantity__c</columns>
    <columns>Total_Shipped_Quantity__c</columns>
    <columns>Order_Number__c</columns>
    <columns>State__c</columns>
    <columns>ASIN__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Retail_Partner__c</field>
        <operation>contains</operation>
        <value>Am</value>
    </filters>
    <label>All</label>
</ListView>